src/objects/click_Bank_Statements_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder__c</fullName>
        <label>Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Loans_Required_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Required Document</label>
        <referenceTo>Required_Document__c</referenceTo>
        <relationshipLabel>Bank Statements Accounts</relationshipLabel>
        <relationshipName>Bank_Statements_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bsb__c</fullName>
        <label>Bsb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_id__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Statements Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Click_Loans_Required_Document__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Statements Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statements Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>